fixes viewport height on mobile devices

--- a/Day_8_Jan_und_Oli/style.css
+++ b/Day_8_Jan_und_Oli/style.css
@@ -5,7 +5,8 @@
 
 body {
     width: 100vw;
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -21,12 +22,7 @@ body {
 }
 
 /* media query smartphone */
-@media screen and (max-width: 767px) {
-    body {
-        max-width: 100vw;
-        max-height: 100vh;
-    }
-    
+@media screen and (max-width: 767px) {   
     #text {
         font-size: 2em;
     }
